Bugzilla bug 219104: handle sockaddr structures that have a sa_len field. That field should not be copied to PRNetAddr's.  The patch is contributed by David Baron <dbaron@mozilla.org>.  r=wtc.